Fix accidental stretching of Banner in cases of short ProductLists

--- a/patterns/core/ProductList/productList.styl
+++ b/patterns/core/ProductList/productList.styl
@@ -16,6 +16,7 @@ $breakpoint-huge = 1150px
 
 .product-list__wrapper
   display flex
+  align-items flex-start
 
 .product-list__list
   display grid
